# breathe-safe-sep-hackathon

./: README.md
backend/: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_position_classifier.py
backend/.github/workflows/: ci.yml
backend/breath_monitor/: __init__.py  __main__.py  capture.py  cli.py  draw.py  events.py  mock_server.py  pose_backend.py  server.py  signal.py  train_pose_classifier.py  ui_streamlit.py  video_capture.py  video_server.py
backend/docs/: BREATHING_README.md  validation.md
backend/models/: position_model.joblib
backend/scripts/: generate_benchmark.py
backend/tests/: __init__.py  test_signal.py
